--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   matrix:
   - TOX_ENV=單元試驗
   - TOX_ENV=flake8
-install
+install:
 - pip install tox
 - pip install python-coveralls
 branches:
