--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ skipsdist = True
 [testenv:單元試驗]
 deps =
     tai5-uan5-gian5-gi2-kang1-ku7
+    django
     coverage
 commands =
     coverage run --source=改資料,轉trs -m unittest discover
